--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "axios": "^1.6.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
