--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.0",
+    "fuse.js": "^7.0.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-tiny-popover": "^8.0.4",
     "react-use": "^17.4.0",
     "seedrandom": "^3.0.5",
     "url-join": "^5.0.0"
