--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.0",
     "clsx": "^2.1.0",
+    "downloadjs": "^1.4.7",
     "fuse.js": "^7.0.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-tiny-popover": "^8.0.4",
     "react-use": "^17.4.0",
     "seedrandom": "^3.0.5",
@@ -30,9 +34,12 @@
     "@commitlint/config-conventional": "^17.4.3",
     "@heroicons/react": "^2.0.15",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/downloadjs": "^1.4.6",
     "@types/leaflet": "^1.9.8",
     "@types/node": "18.13.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.3",
     "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
