--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +38,7 @@
     "@types/downloadjs": "^1.4.6",
     "@types/leaflet": "^1.9.8",
     "@types/node": "18.13.0",
+    "@types/papaparse": "^5.3.14",
     "@types/qrcode": "^1.5.5",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.16.3",
